Fixed setup & Products WIP

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,15 +18,15 @@
     "node": true
   },
   "rules": {
-    "quotes": 0,
-    "indent": "off",
-    "comma-dangle": "off",
+    "quotes": ["error", "single", { "allowTemplateLiterals": true }],
+    "indent": 1,
+    "comma-dangle": ["error", "always-multiline"],
     "no-console": 0,
     "no-debugger": 1,
     "no-var": 1,
-    "semi": [0, "always"],
+    "semi": [1, "never"],
     "no-trailing-spaces": 0,
-    "eol-last": 0,
+    "eol-last": 1,
     "no-unused-vars": 0,
     "no-underscore-dangle": 0,
     "no-alert": 0,
